feat: 🎸 (article-list)列表页面数据获取以及简单渲染&&request方法封装
✅ Closes: #16

--- a/src/global.less
+++ b/src/global.less
@@ -5,6 +5,14 @@ html {
     margin: 0;
     #root {
       height: 100%;
+      .ant-layout {
+        height: 100%;
+        display: flex;
+        .ant-layout-content {
+          display: flex;
+          flex-direction: column;
+        }
+      }
     }
   }
 }
@@ -16,7 +24,7 @@ html {
   width: 100%;
 }
 
-.flexAuto {
+.flex-auto {
   flex: auto;
 }
 .flex {
