--- a/src/global.less
+++ b/src/global.less
@@ -1,3 +1,5 @@
+@xs: 20px;
+@lg: 40px;
 html {
   height: 100%;
   body {
@@ -67,4 +69,20 @@ html {
 
 .align-baseline {
   align-items: baseline;
+}
+
+.over-hidden {
+  overflow: hidden;
+}
+
+.over-auto {
+  overflow: auto;
+}
+
+.padding-lg {
+  padding: @lg;
+}
+
+.padding-xs {
+  padding: @xs;
 }
